--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-share": "^5.0.3",
     "react-slick": "^0.29.0",
     "react-swiper": "^0.1.5",
-    "sass": "^1.82.0",
+    "sass": "^1.83.1",
+    "sass-loader": "^16.0.4",
     "scss": "^0.2.4",
     "sharp": "^0.33.1",
     "slick-carousel": "^1.8.1"
@@ -52,10 +53,10 @@
     "@types/node": "20.11.25",
     "@types/react": "18.2.64",
     "@types/swiper": "^6.0.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.30",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "swiper": "^11.1.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.4.2"
   }
 }
