--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "postcss-nesting": "^13.0.1",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.4.2"
