--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "goopubtag": "^0.3.0",
     "moment": "^2.30.1",
     "next": "^15.1.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-dom": "^19.0.0",
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
