--- a/package.json
+++ b/package.json
@@ -55,10 +55,14 @@
     "@types/react": "18.2.64",
     "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "postcss-nesting": "^13.0.1",
+    "postcss-preset-env": "^10.1.3",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.17",
+    "terser-webpack-plugin": "^5.3.11",
     "typescript": "^5.4.2"
   }
 }
