--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/instrumentation.js"  ],
   "exclude": [
     "node_modules"
   ],
