--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "^15.0.4",
     "framer-motion": "^11.5.4",
     "goopubtag": "^0.3.0",
+    "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
     "next": "^15.1.7",
     "react": "^18.3.1",
